--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,21 @@
 <div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Hotel Paradise</a>
+    <a class="navbar-brand" href="#">
+      <img style="height: 45px" src="./assets/parlogog.png"/>
+     <span style="color: #DCB639"> Hotel Paradise</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Guests</a>
+        </li>
       </ul>
       <button class="btn btn-info" *ngIf="this.showLogoutButton" routerLink="" >Logout</button>
     </div>
