--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,46 @@
-<p>home works!</p>
+<div id="demo" class="carousel slide" data-ride="carousel" data-interval="3000">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="4"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100 h-75" src="./assets/home1.jpeg" alt="first slide" >
+      <div class="carousel-caption">
+        <button class="btn btn-success">Book Now</button>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="./assets/home2.jpeg" alt="second slide" >
+      <div class="carousel-caption">
+        <button class="btn btn-success">Book Now</button>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-75" src="./assets/home3.jpeg" alt="third slide" >
+      <div class="carousel-caption">
+        <button class="btn btn-success">Book Now</button>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-75" src="./assets/home4.jpeg" alt="fourth slide" >
+      <div class="carousel-caption">
+        <button class="btn btn-success">Book Now</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
