added guest booking page:

--- a/src/app/guest-booking/guest-booking.component.css
+++ b/src/app/guest-booking/guest-booking.component.css
@@ -1,15 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-/*.btn.btn_primary,*/
-/*.btn.btn_secondary {*/
-/*  padding: 4px 20px;*/
-/*  font-size: 1em;*/
-/*}*/
-
 .btn.btn_primary {
   background-color: #0065bD;
   border-color: #0065bD;
-  color: #0065bD; !important;
-  border-radius: 0;
+  color: #fff !important;
+  border-radius: 15px 15px 15px 15px;
   display: inline-flex;
   align-items: center;
   padding: 0;
