--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,11 +10,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active"  [routerLink]="['home']">Home
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Guests</a>
+          <a class="nav-link" [routerLink]="['guest-details']">Guests</a>
         </li>
       </ul>
       <button class="btn btn-info" *ngIf="this.showLogoutButton" routerLink="" >Logout</button>
