--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,25 +13,25 @@
     <div class="carousel-item active">
       <img class="d-block w-100 h-75" src="./assets/home1.jpeg" alt="first slide" >
       <div class="carousel-caption">
-        <button class="btn btn-success">Book Now</button>
+        <button class="btn btn-success" (click)="redirectToGuestBooking()">Book Now</button>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="./assets/home2.jpeg" alt="second slide" >
       <div class="carousel-caption">
-        <button class="btn btn-success">Book Now</button>
+        <button class="btn btn-success" (click)="redirectToGuestBooking()">Book Now</button>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 h-75" src="./assets/home3.jpeg" alt="third slide" >
       <div class="carousel-caption">
-        <button class="btn btn-success">Book Now</button>
+        <button class="btn btn-success" (click)="redirectToGuestBooking()">Book Now</button>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 h-75" src="./assets/home4.jpeg" alt="fourth slide" >
       <div class="carousel-caption">
-        <button class="btn btn-success">Book Now</button>
+        <button class="btn btn-success" (click)="redirectToGuestBooking()">Book Now</button>
       </div>
     </div>
   </div>
