--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <div class="form-group d-flex justify-content-center">
+          <div class="form-group d-flex justify-content-center mb-0">
             <button type="submit" class="btn btn-primary ">Login</button>
           </div>
         </div>
