--- a/src/app/guest-details/guest-details.component.html
+++ b/src/app/guest-details/guest-details.component.html
@@ -1,4 +1,5 @@
-<div class="container table-responsive">
+  <div class="container-flex table-responsive">
+
   <table class="table table-bordered table-striped">
     <thead>
     <tr>
@@ -9,10 +10,16 @@
       <th>CheckedOut Time</th>
       <th>Room No</th>
       <th>Action</th>
+      <th>Check-In/Check-Out</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let guest of guestDetails; index as i">
+    <tr *ngFor="let guest of guestDetails| paginate : {
+                itemsPerPage: 5,
+                currentPage: currentPage,
+                totalItems: totalElements
+              };
+        let i = index" [class.active]="i == currentIndex">
       <td>{{i + 1}}</td>
       <td>{{guest.guestFirstName}}</td>
       <td>{{guest.guestLastName}}</td>
@@ -25,13 +32,28 @@
             <i class="fa fa-pencil mr-3" style="color: green; cursor: pointer" aria-hidden="true"
                (click)="editGuest(guest.guestId)"></i>
             <i class="btn btn-lg btn-outline-primary" class="fa fa-trash-o" aria-hidden="true"
-               style="color: red; cursor: pointer" (click)="deleteGuest(guest.guestId, content)"></i>
+               style="color: #ff0000; cursor: pointer" (click)="deleteGuest(guest.guestId, content)"></i>
           </div>
         </div>
+      </td>
+      <td>
+        <button class="btn btn-primary mr-2" (click)="guestCheckIn(guest.guestId)">Check In</button>
+        <button class="btn btn-danger" (click)="guestCheckOut(guest.guestId)">Check Out</button>
       </td>
     </tr>
     </tbody>
   </table>
+  <div class="row">
+    <div class="col-xs-12 col-12  d-flex justify-content-end">
+      <pagination-controls
+        responsive="true"
+        previousLabel="Prev"
+        nextLabel="Next"
+
+        (pageChange)="pageChanged($event)">
+      </pagination-controls>
+    </div>
+  </div>
 </div>
 
 <ng-template #content let-modal>
@@ -42,11 +64,13 @@
     </button>
   </div>
   <div class="modal-body">
-    <form>
+    <form [formGroup]="reasonToDeleteForm">
       <div class="form-group">
-        <label for="reasonToDelete">Reason Of Cancellation</label>
+        <label for="reasonToDelete">Reason Of Cancellation</label><i class="fa fa-asterisk" style="color: red; font-size: 0.4rem;top: -5px; position: relative" aria-hidden="true"></i>
         <div class="input-group">
-          <input id="reasonToDelete" class="form-control" placeholder="Cancellation Reason" name="dp">
+          <input id="reasonToDelete" class="form-control" placeholder="Cancellation Reason" formControlName="reasonForCancel" name="dp">
+          <div [hidden]="!reasonForm.reasonForCancel.touched" *ngIf="reasonForm.reasonForCancel.errors"
+               class="text-danger col-lg-12"> Cancellation Reason is required</div>
         </div>
       </div>
     </form>
@@ -54,7 +78,7 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" ngbAutofocus class="btn btn-danger"
-            (click)="modal.close('Save click')">YES
+            (click)="modal.close()" [disabled]="isFormValid()">YES
     </button>
     <button type="button" class="btn btn-outline-dark" (click)="modal.dismiss()">NO</button>
   </div>
